--- a/semester-2/week-3.html
+++ b/semester-2/week-3.html
@@ -137,10 +137,21 @@
 
                 <div class="exp-block">
                     <p>
-                        Taking Andreas' feedback seriously from last week, I did a deliberate uncomfortable reflection on how my attention is shaped, fragmented, and quietly harvested in environments of extreme media saturation. I tried to focus on what kind of small interactions I make on social media apps and I settled down on the action of "clicking". The small, repetitive clicks felt instinctive, almost meaningless.</p>
-                    <p>A lot of content now adays create memes and they thrive in rapid circulation. They are instantly recognisable, emotionally efficient, and endlessly replaceable. Memes demand very little from us cognitively, yet they are highly effective at capturing attention and prompting interaction.</p>
+                        Taking Andreas' feedback seriously from last week, I did a deliberate uncomfortable reflection
+                        on how my attention is shaped, fragmented, and quietly harvested in environments of extreme
+                        media saturation. I tried to focus on what kind of small interactions I make on social media
+                        apps and I settled down on the action of "clicking". The small, repetitive clicks felt
+                        instinctive, almost meaningless.</p>
+                    <p>A lot of content now adays create memes and they thrive in rapid circulation. They are instantly
+                        recognisable, emotionally efficient, and endlessly replaceable. Memes demand very little from us
+                        cognitively, yet they are highly effective at capturing attention and prompting interaction.</p>
                     <p><em>How can I make visible an interaction that is <strong>habitual</strong>?</em></p>
                 </div>
+            </section>
+
+            <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
+            <section class="exp-row full">
+                <img src="/assets/images/p6-mindmap.jpg" alt="" style="object-fit:contain;">
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -154,11 +165,25 @@
                         <video src="/assets/videos/p6-hover.mp4" autoplay muted loop playsinline alt=""
                             style="width:100%; object-fit:contain; flex:1; transform-origin:center; margin-bottom:20px; border: 0;"></video>
                     </div>
-                    <p>Shifting the focus away from large, dramatic gestures, <strong>World of Brainrot</strong> operates through a single <strong>micro-interaction</strong> action: clicking. The intention is to make the user pause and ask a deceptively simple question: <em>why am I still clicking?</em>
+                    <p>Shifting the focus away from large, dramatic gestures, <strong>World of Brainrot</strong>
+                        operates through a single <strong>micro-interaction</strong> action: clicking. The intention is
+                        to make the user pause and ask a deceptively simple question: <em>why am I still clicking?</em>
                     </p>
-                    <p>It is an interactive webpage where users are to repeatedly select content they recognise or feel drawn to. At first, the experience feels playful, but beneath the surface, the system is constantly recording behaviour: <em>what is clicked, how often, and in what patterns</em>. As they are feeding the system with their interactions, these data are being translated into an identity portrait of themselves. It is a constructed version of the user that emerge not from who they claim to be, but from all the content they clicked on and engaged with.</p>
-                    <p>By centring the experience around memes, <strong>World of Brainrot</strong> mirrors the way users consume large volumes of digital content quickly, often without reflection or lasting value. The work questions <em>what happens</em> when interaction becomes habitual rather than meaningful.</p>
-                    <p>Ultimately, <strong>World of Brainrot</strong> functions as narrative about quiet participation. It reveals how seemingly trival actions like clicking are woven into larger systems that define who we are through data. By making this process visible, it invites users to reflection on how easily identity can be formed through their patterns of behaviour, and how often we surrender agency without even noticing.</p>
+                    <p>It is an interactive webpage where users are to repeatedly select content they recognise or feel
+                        drawn to. At first, the experience feels playful, but beneath the surface, the system is
+                        constantly recording behaviour: <em>what is clicked, how often, and in what patterns</em>. As
+                        they are feeding the system with their interactions, these data are being translated into an
+                        identity portrait of themselves. It is a constructed version of the user that emerge not from
+                        who they claim to be, but from all the content they clicked on and engaged with.</p>
+                    <p>By centring the experience around memes, <strong>World of Brainrot</strong> mirrors the way users
+                        consume large volumes of digital content quickly, often without reflection or lasting value. The
+                        work questions <em>what happens</em> when interaction becomes habitual rather than meaningful.
+                    </p>
+                    <p>Ultimately, <strong>World of Brainrot</strong> functions as narrative about quiet participation.
+                        It reveals how seemingly trival actions like clicking are woven into larger systems that define
+                        who we are through data. By making this process visible, it invites users to reflection on how
+                        easily identity can be formed through their patterns of behaviour, and how often we surrender
+                        agency without even noticing.</p>
                     <p>Read more about the algorithmic process breakdown in <strong>Prototype 6's Catalogue of
                             Making.</strong></p>
                     <!-- BUTTON ALIGNED TO LEFT, AT BOTTOM -->
@@ -219,21 +244,31 @@
             <section class="exp-row cols-4">
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/e8-1.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p6-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/e8-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p6-3.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/e8-3.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p6-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="assets/images/e8-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="/assets/images/p6-5.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
+            </section>
+
+            <!-- ROW — SPLIT WITH TWO IMAGES -->
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <img src="/assets/images/p6-6.png" alt="">
+                </div>
+                <div class="exp-block">
+                    <img src="/assets/images/p6-7.png" alt="">
+                </div>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -263,9 +298,25 @@
             <!-- ROW 4 — FULL WIDTH VIDEO -->
             <section class="exp-row full">
                 <div style="position:relative; width:100%; padding-bottom:56.25%; overflow:hidden;">
-                    <video src="assets/videos/e8-demo.mp4" autoplay muted loop playsinline
+
+                    <video id="expVideo" src="/assets/videos/p6-demo.mp4" autoplay muted loop playsinline
                         style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover;">
                     </video>
+
+                    <!-- MUTE / UNMUTE BUTTON -->
+                    <button id="muteToggle" style="
+        position:absolute;
+        bottom:12px;
+        right:12px;
+        z-index:10;
+        background:rgba(255,255,255,0.85);
+        border:none;
+        padding:6px 10px;
+        font-size:12px;
+        cursor:pointer;
+      ">
+                        🔇
+                    </button>
 
                 </div>
 
@@ -274,57 +325,44 @@
                 </figcaption>
             </section>
 
+
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
                 <div class="exp-block">
-                    <h3><strong>Feedback</strong></h3>
+                    <h3><strong>Dean Nur's Feedback</strong></h3>
                 </div>
 
                 <div class="exp-block">
-                    <h3><strong>➀ Media Saturation</strong></h3>
-                    <p>Building on Andreas’ interpretation of my identity-formation visuals, he read the work as a
-                        <strong>commentary</strong> on how we <strong>perceive media content</strong> today,
-                        specifically the overwhelming, <strong>continuous influx of information</strong>. He noted how
-                        content is consumed <strong>rapidly</strong> and discarded within seconds,
-                        and suggested that this could be developed further as a <strong>distorted or fragmented
-                            worldview</strong> shaped
-                        by fast-paced media consumption. This raised the question of whether my exploration could more
-                        explicitly address how social media conditions perception and attention.
+                    <p>The feedback received from the Dean affirmed that <strong>Prototype 6: World of Brainrot</strong>
+                        is a strong and relevant starting point, particularly in its use of viral content to reflect the
+                        realism of contemporary digital behaviour. The interactive flow successfully mirrors how people
+                        actually engage with media, making the experience feel familiar rather than staged. However, the
+                        work needs to move beyond recognition and novelty towards deeper reflection and consequence.</p>
+                    <br><br>
+                    <h3><strong>➀ Grounded Meaningful Data</strong></h3>
+                    <p>Rather than abstract clicks, the experience could begin with more relatable entry points such as
+                        food, culture, politics etc. using curated datasets (e.g. top trending foods or dominant
+                        political narratives) to help audience see themselves more clearly in the system. Using real or
+                        semi-real data would allow users to react emotionally and critically to their own patterns,
+                        rather than treating the interaction as playful noise.
                     </p><br><br>
-                    <h3><strong>➁ Micro-Experiences</strong></h3>
-                    <p>A key concern was how these ideas could be communicated through
-                        <strong>micro-experiences</strong>. Andreas
-                        questioned how <strong>small, momentary interactions</strong> might be used to reflect the
-                        speed, repetition, and
-                        passivity of scrolling culture, and whether this logic could be <strong>subverted</strong> to
-                        deliver more
-                        <strong>meaningful or reflective</strong> content instead. The challenge is not only to
-                        replicate fast content
-                        delivery, but to interrupt it in a way that prompts awareness.
+                    <h3><strong>➁ Exhibition Context and Scale</strong></h3>
+                    <p>The feedback also challenged me to think more deliberately about exhibition context and scale.
+                        The work should not feel niche or self-contained, but capable of aggregating individual
+                        interactions into a larger portrait of collective behaviour. This opens up questions of how
+                        personal data becomes cultural data, and how shared habits shape algorithmic norms.
                     </p><br><br>
-                    <h3><strong>➂ Aesthetic → Conceptual Grounding</strong></h3>
-                    <p>I was also questioned on my use of <strong>ASCII</strong> characters, noting that they currently
-                        function primarily as an
-                        aesthetic choice rather than a conceptually grounded one. To move beyond surface-level visuals,
-                        the work needs a <strong>clearer narrative or motivation</strong>, whether through interaction,
-                        storytelling, or
-                        moving image, so that users understand why they are engaging with the work. Rather than
-                        encouraging mindless action, the experience should <strong>provoke self-reflection</strong>,
-                        such as questioning
-                        habitual behaviours like doom-scrolling.
+                    <h3><strong>➂ Emotion: Guilt</strong></h3>
+                    <p>Emotionally, the dean pointed towards <em>guilt</em> as a powerful but underexplored affect.
+                        Doomscrolling is not just passive consumption. It often carries a quiet sense of discomfort,
+                        addiction, and self-awareness. Rather than explicitly naming addiction, the work could surface
+                        guilt through subtle prompts, emotional questions, and reflective moments such as revealing
+                        hours spent, repetitive choices, or emotional dependencies. Researching how artists provoke
+                        emotional response through sound, staging, or pacing could help deepen this affective layer.
                     </p><br><br>
-                    <h3><strong>➃ Exhibition & Structural Coherence</strong></h3>
-                    <p>Given that the project’s outcome is an exhibition contribution, Andreas emphasised the need to
-                        think <strong>structurally</strong>: <em>how many works are involved, how they connect, and how
-                            they collectively
-                            communicate a coherent idea</em>. Instead of a single, monolithic piece, he suggested
-                        considering
-                        smaller, focused experiments: possibly multiple short interactions where <strong>one clear
-                            action
-                            produces a visible system response</strong>. These micro-experiments could together
-                        visualise how systems
-                        shape perception and behaviour, making the underlying structure of media consumption more
-                        legible.
+                    <p>Overall, the feedback pushes the project to evolve from a simulation of brainrot into a
+                        reflective system: one that makes users confront their consumption habits, question their
+                        agency, and consider whether awareness might lead to behavioural change.</p>
                     </p><br><br>
                 </div>
             </section>
@@ -332,34 +370,13 @@
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
                 <div class="exp-block">
-                    <h3><strong>Dean's Feedback</strong></h3>
+                    <h3><strong>Group Feedback</strong></h3>
                 </div>
 
                 <div class="exp-block">
-                    <h3><strong>➀ WORLD → NUMBER → LABEL</strong></h3>
-                    <p>Over the holidays, I received detailed feedback from my lecturers on both my dissertation and
-                        graduation project. This week's consultation provided an opportunity to revisit these comments
-                        together and unpack them more clearly. Through discussion, we clarified key issues around my
-                        <strong>third pillar: exhibition design</strong>, coherence, and how the work should come
-                        together moving forward.
+                    <h3><strong>➀ TBU</strong></h3>
+                    <p>TBUTBUTBU
                     </p>
-                </div>
-            </section>
-
-            <!-- ROW 2 — SPLIT ROW -->
-            <section class="exp-row split">
-                <div class="exp-block">
-                    <h3><strong>GDI Interview</strong></h3>
-                </div>
-
-                <div class="exp-block">
-                    <p>This week marked a significant milestone as I was shortlisted for GDI after being selected by
-                        lecturers to submit a critical essay. Following this, I attended an interview with our school's
-                        <strong>Dean, Nur</strong>.
-                    </p>
-                    <p>The interview provided an opportunity to articulate my research interests, how my project is
-                        going, while reflecting how I can further improve or explore it. I received valuable,
-                        insightful, and encouraging feedback from Nur.</p>
                 </div>
             </section>
 
@@ -460,6 +477,17 @@
 
         });
     </script>
+
+    <script>
+        const video = document.getElementById("expVideo");
+        const btn = document.getElementById("muteToggle");
+
+        btn.addEventListener("click", () => {
+            video.muted = !video.muted;
+            btn.textContent = video.muted ? "🔇" : "🔊";
+        });
+    </script>
+
 
 </body>
 
