--- a/semester-2/week-3.html
+++ b/semester-2/week-3.html
@@ -9,8 +9,7 @@
     <base href="/algorithmic-identities/">
 
     <link rel="icon" href="favicon.png" />
-    <!-- <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css"> -->
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">
 </head>
 
 <body>
@@ -108,7 +107,7 @@
                         interview with our school's
                         <span class="text-hover-image">
                             <strong>Dean, Nur</strong>
-                            <img src="/assets/images/dean-nur.jpeg" alt="Dean Nur">
+                            <img src="assets/images/dean-nur.jpeg" alt="Dean Nur">
                         </span>
                         to share with her my current Graduation Project progress.
                     </p>
@@ -117,14 +116,14 @@
                         going, while reflecting how I can further improve or explore it. I received valuable,
                         insightful, and encouraging feedback from <span class="text-hover-image">
                             <strong>Dean, Nur.</strong>
-                            <img src="/assets/images/dean-nur.jpeg" alt="Dean Nur">
+                            <img src="assets/images/dean-nur.jpeg" alt="Dean Nur">
                         </span></p>
                 </div>
             </section>
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/s2-w3-gdi-hero.jpeg" alt="" style="object-fit:cover;">
+                <img src="assets/images/s2-w3-gdi-hero.jpeg" alt="" style="object-fit:cover;">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>Global Design Initiative</strong><em>
                         GDI</em></figcaption>
             </section>
@@ -151,7 +150,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/p6-mindmap.jpg" alt="" style="object-fit:contain;">
+                <img src="assets/images/p6-mindmap.jpg" alt="" style="object-fit:contain;">
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -162,7 +161,7 @@
 
                 <div class="exp-block">
                     <div class="exp-block" style="overflow:hidden;">
-                        <video src="/assets/videos/p6-hover.mp4" autoplay muted loop playsinline alt=""
+                        <video src="assets/videos/p6-hover.mp4" autoplay muted loop playsinline alt=""
                             style="width:100%; object-fit:contain; flex:1; transform-origin:center; margin-bottom:20px; border: 0;"></video>
                     </div>
                     <p>Shifting the focus away from large, dramatic gestures, <strong>World of Brainrot</strong>
@@ -244,19 +243,19 @@
             <section class="exp-row cols-4">
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/p6-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/p6-2.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/p6-3.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/p6-3.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/p6-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/p6-4.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
                 <figure class="exp-block" style="margin:0; padding:0; display:flex; flex-direction:column;">
-                    <img src="/assets/images/p6-5.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
+                    <img src="assets/images/p6-5.png" style="width:100%; height:100%; object-fit:cover; flex:1;">
                 </figure>
 
             </section>
@@ -264,10 +263,10 @@
             <!-- ROW — SPLIT WITH TWO IMAGES -->
             <section class="exp-row split">
                 <div class="exp-block">
-                    <img src="/assets/images/p6-6.png" alt="">
+                    <img src="assets/images/p6-6.png" alt="">
                 </div>
                 <div class="exp-block">
-                    <img src="/assets/images/p6-7.png" alt="">
+                    <img src="assets/images/p6-7.png" alt="">
                 </div>
             </section>
 
@@ -299,7 +298,7 @@
             <section class="exp-row full">
                 <div style="position:relative; width:100%; padding-bottom:56.25%; overflow:hidden;">
 
-                    <video id="expVideo" src="/assets/videos/p6-demo.mp4" autoplay muted loop playsinline
+                    <video id="expVideo" src="assets/videos/p6-demo.mp4" autoplay muted loop playsinline
                         style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover;">
                     </video>
 
