--- a/semester-1/week-1.html
+++ b/semester-1/week-1.html
@@ -62,7 +62,7 @@
                     <ul class="overview-weeks">
                         <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
                         <li><a href="semester-2/week-2.html"><strong>W2</strong> : E8</a></li>
-                        <li><a href="semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
+                        <li><a href="semester-2/week-3.html"><strong>W3</strong> : P-6 & GDI Interview</a></li>
                     </ul>
                 </div>
 
