--- a/semester-2/week-2.html
+++ b/semester-2/week-2.html
@@ -61,7 +61,7 @@
                         <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
                         <li><a href="semester-2/week-2.html" class="active"><strong>W2</strong> : E-8</a>
                         </li>
-                        <li><a href="semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-5</a></li>
+                        <li><a href="semester-2/week-3.html"><strong>W3</strong> : P-6 & GDI Interview</a></li>
                     </ul>
                 </div>
 
