--- a/semester-2/week-3.html
+++ b/semester-2/week-3.html
@@ -200,21 +200,15 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-20px;">
-                <img src="assets/images/s2-w2-e8-p5process.png" alt="" style="object-fit: contain;">
-                <figcaption style="font-size: 12px; text-align: left;"><strong>Identity Contagion</strong><em>
-                        p5.js</em></figcaption>
+                <img src="assets/images/p6-code.jpg" alt="" style="object-fit: contain;">
+                <figcaption style="font-size: 12px; text-align: left;"><strong>VS Code</strong><em>
+                        HTML, CSS, JS</em></figcaption>
             </section>
 
             <section class="exp-row split" style="margin-top:-80px;">
                 <div class="exp-block">
-                    <p>I began with a fixed human silhouette image, and using image trace, it is composed by ASCII
-                        characters. This sets a baseline trace of the subject that never changes. Instead of altering
-                        the image itself, I wanted the system to record all user interactions as permanent overlays that
-                        accumulate over time.</p>
-                    <p>I set the rule where each committed word becomes a data event that is incrementally thickening,
-                        enlarging, or distorting clusters of characters within the silhouette. The system only records
-                        data when it is submitted using the space or enter button. Rotation is triggered by pressing a
-                        single key "E".</p>
+                    <p>I curated a small "database" of familiar meme images and short viral meme clips by actively scouring online spaces where brainrot content spreads fastest. The memes are used as a raw material of digital attention, low-effort to consume, and designed to trigger quick clicks. To echo the logic of apps and gaming interfaces, I built a HUD-style onboarding screen where users are asked to input their particulars, framing the experience as a system that "needs" data before it begins.</p>
+                    <p>Once it starts, every click triggers a new state. The interface multiples, splits, and floods the screen with more randomised meme content. The interaction escalates quickly, simulating how platforms reward engagement with constant novelty and volume. As the user keeps clicking, the system quietly collects what they choose and then recomposes these into an identity portrait. The final output turns mindless consumption into visible inference: an "algorithmic identity" of the user built from nothing but the content they couldn't stop interacting with.</p>
                 </div>
 
                 <div class="exp-block">
