--- a/semester-2/week-3.html
+++ b/semester-2/week-3.html
@@ -62,7 +62,8 @@
                     <ul class="overview-weeks">
                         <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
                         <li><a href="semester-2/week-2.html"><strong>W2</strong> : E-8</a></li>
-                        <li><a href="semester-2/week-3.html" class="active"><strong>W3</strong> : P-6 & GDI Interview</a></li>
+                        <li><a href="semester-2/week-3.html" class="active"><strong>W3</strong> : P-6 & GDI
+                                Interview</a></li>
                     </ul>
                 </div>
 
@@ -207,8 +208,18 @@
 
             <section class="exp-row split" style="margin-top:-80px;">
                 <div class="exp-block">
-                    <p>I curated a small "database" of familiar meme images and short viral meme clips by actively scouring online spaces where brainrot content spreads fastest. The memes are used as a raw material of digital attention, low-effort to consume, and designed to trigger quick clicks. To echo the logic of apps and gaming interfaces, I built a HUD-style onboarding screen where users are asked to input their particulars, framing the experience as a system that "needs" data before it begins.</p>
-                    <p>Once it starts, every click triggers a new state. The interface multiples, splits, and floods the screen with more randomised meme content. The interaction escalates quickly, simulating how platforms reward engagement with constant novelty and volume. As the user keeps clicking, the system quietly collects what they choose and then recomposes these into an identity portrait. The final output turns mindless consumption into visible inference: an "algorithmic identity" of the user built from nothing but the content they couldn't stop interacting with.</p>
+                    <p>I curated a small "database" of familiar meme images and short viral meme clips by actively
+                        scouring online spaces where brainrot content spreads fastest. The memes are used as a raw
+                        material of digital attention, low-effort to consume, and designed to trigger quick clicks. To
+                        echo the logic of apps and gaming interfaces, I built a HUD-style onboarding screen where users
+                        are asked to input their particulars, framing the experience as a system that "needs" data
+                        before it begins.</p>
+                    <p>Once it starts, every click triggers a new state. The interface multiples, splits, and floods the
+                        screen with more randomised meme content. The interaction escalates quickly, simulating how
+                        platforms reward engagement with constant novelty and volume. As the user keeps clicking, the
+                        system quietly collects what they choose and then recomposes these into an identity portrait.
+                        The final output turns mindless consumption into visible inference: an "algorithmic identity" of
+                        the user built from nothing but the content they couldn't stop interacting with.</p>
                 </div>
 
                 <div class="exp-block">
@@ -359,6 +370,14 @@
                 </div>
             </section>
 
+            <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
+            <section class="exp-row full" style="margin-top:-20px;">
+                <img src="assets/images/p6-andreas.png" alt="" style="object-fit: contain;">
+                <figcaption style="font-size: 12px; text-align: left;"><strong>Andreas</strong><em>
+                        World of Brainrot</em></figcaption>
+            </section>
+
+
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
                 <div class="exp-block">
@@ -366,9 +385,9 @@
                 </div>
 
                 <div class="exp-block">
-                    <h3><strong>➀ TBU</strong></h3>
-                    <p>TBUTBUTBU
+                    <p>The feedback made me reflect on how the experience could feel more open and intuitive, particularly at the start. There was a clear preference for allowing users to interact freely rather than guiding them through structued steps or form-filling, which helped me realise that my entry point may be too restrictive. Andreas personally did not like the idea of having to fill in the form, and that the bootLog starting screen was redundant. I was prompted to form a coherent narrative. While the project was described as ambitious, I was encouraged to move forward with the current plan, test it with real users, and improve it through feedback rather than over-refining it in theory.
                     </p>
+                    <p>What stood out most was the emphasis on the experiential quality of work, bringing audiences along a journey through interaction, especially the moment where the system reacts in engaging ways to familiar content like memes. I was also reminded that the outcomes do not need to be limited to an exhibition alone, but coud extend into publications or a website, and that exploring physical forms such as 3D renders or printed models may help make the work more tangible.</p>
                 </div>
             </section>
 
