--- a/semester-2/week-1.html
+++ b/semester-2/week-1.html
@@ -61,6 +61,7 @@
                         <li><a href="semester-2/week-1.html" class="active"><strong>W1</strong> : SEM-1 Review</a></li>
                         <li><a href="semester-2/week-2.html"><strong>W2</strong> : E-8</a></li>
                         <li><a href="semester-2/week-3.html"><strong>W3</strong> : P-6 & GDI Interview</a></li>
+                        <li><a href="semester-2/week-4.html"><strong>W4</strong> : Exploring Arduino</a></li>
                     </ul>
                 </div>
 
