--- a/semester-2/week-2.html
+++ b/semester-2/week-2.html
@@ -59,9 +59,9 @@
                     </button>
                     <ul class="overview-weeks">
                         <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="semester-2/week-2.html" class="active"><strong>W2</strong> : E-8</a>
-                        </li>
+                        <li><a href="semester-2/week-2.html" class="active"><strong>W2</strong> : E-8</a></li>
                         <li><a href="semester-2/week-3.html"><strong>W3</strong> : P-6 & GDI Interview</a></li>
+                        <li><a href="semester-2/week-4.html"><strong>W4</strong> : Exploring Arduino</a></li>
                     </ul>
                 </div>
 
